--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 .btn {
   border: 2px solid rgba(156, 163, 175, var(--tw-border-opacity)) !important;
   height: 56px !important;
-  @apply flex justify-center items-center border-2 border-gray-400 w-56 rounded bg-gray-300 text-gray-800 text-2xl font-bold italic font-sans !important;
+  @apply flex leading-none px-2 justify-center items-center border-2 border-gray-400 w-56 rounded bg-gray-300 text-gray-800 text-2xl font-bold italic font-sans !important;
 }
 
 .btn.Mui-disabled {
